# python_template

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: setup.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  manifest.yaml  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/docs/: conf.py
